--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
   });
 
   await printLine('apetureBASIC');
+  await printLine('not everything is done but things like print work'):
   await printLine('Paste/type multiple lines, then press Ctrl+Enter to execute.');
 })();
 </script>
